--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<span class="subheading">Hello!</span>
 								<h1 class="mb-4 mt-3">I'm <span>Swetha</span></h1>
 								<h2 class="mb-4">A Web Designer</h2>
-								<p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section"
+								<p><a href="mailto:swethakrishnan157@gmail.com" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section"
 										class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 							</div>
 						</div>
@@ -499,7 +499,7 @@
 				<div class="col-md-7 ftco-animate text-center">
 					<h2>I'm <span>Available</span> for freelancing</h2>
 					<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p> -->
-					<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+					<!-- <a href="mailto:swethakrishnan157@gmail.com" class="btn btn-primary py-3 px-5">Hire me</a> -->
 				</div>
 			</div>
 		</div>
